--- a/custom_components/onecontrol/manifest.json
+++ b/custom_components/onecontrol/manifest.json
@@ -1,9 +1,13 @@
 {
   "domain": "onecontrol",
   "name": "OneControl",
-  "codeowners": ["@petehurth"],
+  "codeowners": [
+    "@petehurth"
+  ],
   "config_flow": true,
-  "dependencies": ["bluetooth_adapters"],
+  "dependencies": [
+    "bluetooth_adapters"
+  ],
   "documentation": "https://github.com/petehurth/ha-onecontrol",
   "bluetooth": [
     {
@@ -14,6 +18,9 @@
     }
   ],
   "iot_class": "local_push",
-  "requirements": ["bleak>=0.21.0", "bleak-retry-connector>=3.1.0"],
-  "version": "0.2.0"
+  "requirements": [
+    "bleak>=0.21.0",
+    "bleak-retry-connector>=3.1.0"
+  ],
+  "version": "1.0.2"
 }
